objects/wkdw__TicketCategoryDefinition__mdt.object
<CustomObject>
    <description>Defines the type of tickets when more than one is available. By default, only one ticket category is available in Employee Concierge, but additional categories can be created in the org.</description>
    <fields>
        <fullName>wkdw__AssociatedKnowledgeArticleTypeMapping__c</fullName>
        <description>A comma-separated list of knowledge article record types that map to the associated ticket category.</description>
        <inlineHelpText>Enter all knowledge article record types associated with the ticket category.</inlineHelpText>
        <label>AssociatedKnowledgeArticleTypeMapping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>wkdw__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this ticket category is active or not.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__Name__c</fullName>
        <description>The unique name of the individual ticket category. The values for this field must match the API name values in the ticket category picklist field (TicketCategory__c on the Case object).</description>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wkdw__QuickAction__c</fullName>
        <description>The set of fields associated with the ticket category. Available on the new ticket form when the related ticket category is selected.
        
        Specify the full API name of the quick action, including the org namespace prefix (if exists) and the object api name.</description>
        <label>Quick Action Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Ticket Category Definition</label>
    <pluralLabel>Ticket Category Definitions</pluralLabel>
    <validationRules>
        <fullName>wkdw__AssociatedKnowledgeArticleTypeMapFormat</fullName>
        <active>true</active>
        <description>Enter comma-separated knowledge article record types.</description>
        <errorConditionFormula>AND(
!ISBLANK(wkdw__AssociatedKnowledgeArticleTypeMapping__c),
OR
            ( 
!REGEX(wkdw__AssociatedKnowledgeArticleTypeMapping__c, &quot;^(?!_)([a-zA-Z0-9_]+,( ){0,2})*[a-zA-Z0-9_]+$&quot;)
        ))</errorConditionFormula>
        <errorDisplayField>wkdw__AssociatedKnowledgeArticleTypeMapping__c</errorDisplayField>
        <errorMessage>We couldn&apos;t find knowledge article record types that match your values. Enter the names exactly.</errorMessage>
    </validationRules>
</CustomObject>